--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "Mba.ux.Viewport",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "homepage": "https://github.com/bluebile/Mba.ux.Viewport",
     "authors": [
         "Bluebile <info@bluebile.com>"
@@ -28,5 +28,6 @@
         "package.json",
         "test",
         "tests"
-    ]
+    ],
+    "requires": "Mba.ux.viewport.*"
 }
