* Refactoring da correção do iOS (realizada na v0.0.18) adicionado um plugin com dependencia do IONIC Keyboard;   * Ignorado Ext.MessageBox para stack do Navigation;   * Evento do back lançado antes de ativar a tela;

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
     "name": "Mba.ux.Viewport",
-    "version": "0.0.19",
+    "version": "1.0.0",
     "homepage": "https://github.com/bluebile/Mba.ux.Viewport",
     "authors": [
         "Bluebile <info@bluebile.com>"
     ],
-    "description": "Correções viewports Android e WP8",
+    "description": "Correções viewports Android, WP8 e iOS",
     "main": [
         "viewport/Default.js"
     ],
@@ -29,5 +29,5 @@
         "test",
         "tests"
     ],
-    "requires": "Mba.ux.viewport.*"
+    "requires": "Mba.ux.Viewport.viewport.*"
 }
