--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "Mba.ux.Viewport",
-    "version": "1.0.0RC",
+    "version": "1.0.0RC2",
     "homepage": "https://github.com/bluebile/Mba.ux.Viewport",
     "authors": [
         "Bluebile <info@bluebile.com>"
