--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "Mba.ux.Viewport",
-    "version": "1.0.0RC",
+    "version": "1.0.0RC2",
     "dependencies": {
         "gulp": "^3.8.8",
         "gulp-jshint": "https://github.com/bluebile/gulp-jshint.git",
